--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "common-toolbox",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
-  "module": "index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "type": "module",
   "scripts": {
     "build": "rollup -c",
@@ -12,7 +12,7 @@
   "keywords": [],
   "author": "laqudee",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "axios": "^1.3.4",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.2.1",
