fix & chore 尝试修复github workflows

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,8 +15,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm cli
-      - run: npm test
+       - name: Install pnpm
+        run: npm install -g pnpm
+      - run: pnpm install
+      - run: pnpm build
 
   publish-npm:
     needs: build
@@ -27,7 +29,9 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm cli
-      - run: npm publish
+      - name: Install pnpm
+        run: npm install -g pnpm
+      - run: pnpm install
+      - run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
