--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "common-toolbox",
   "version": "0.0.3",
-  "description": "",
+  "description": "Very practical utility library for JavaScript business projects.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "type": "module",
@@ -9,9 +9,14 @@
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["toolbox", "utils", "library", "common"],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/laqudee/common-toolbox.git"
+  }, 
+  "homepage": "https://github.com/laqudee/common-toolbox#readme",
   "author": "laqudee",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.3.4",
     "js-cookie": "^3.0.1",
