feat 增加浏览器相关功能

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "jsencrypt": "^3.2.1",
     "qs": "^6.11.1",
     "lodash": "^4.17.21",
-    "dayjs": "^1.11.2"
+    "dayjs": "^1.11.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "prettier": "^2.8.4",
